Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49080

QJSEngine has no abort function

XMLWordPrintable

    • 9b6c20cb719542cfcf3e031afd5b2b0b1cd3833e (qt/qtdeclarative/dev)

      the new script engine QJSEngine has no abort function
      like the old script engine QScriptEngine::abortEvaluation.

      which is useful for use to abort non respond script.

        For Gerrit Dashboard: QTBUG-49080
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            tomnotcat tomnotcat
            Votes:
            28 Vote for this issue
            Watchers:
            36 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes