src/qml/jsapi/qjsvalue.cpp
@@ -769,6 +769,8 @@ QJSValue QJSValue::call(const QJSValueList &args)
     ScopedValue result(scope, f->call(jsCallData));
     if (engine->hasException)
         result = engine->catchException();
+    if (engine->isInterrupted)
+        result = engine->newErrorObject(QStringLiteral("Interrupted"));
 
     return QJSValue(engine, result->asReturnedValue());
 }
@@ -825,6 +827,8 @@ QJSValue QJSValue::callWithInstance(const QJSValue &instance, const QJSValueList
     ScopedValue result(scope, f->call(jsCallData));
     if (engine->hasException)
         result = engine->catchException();
+    if (engine->isInterrupted)
+        result = engine->newErrorObject(QStringLiteral("Interrupted"));
 
     return QJSValue(engine, result->asReturnedValue());
 }
@@ -873,6 +877,8 @@ QJSValue QJSValue::callAsConstructor(const QJSValueList &args)
     ScopedValue result(scope, f->callAsConstructor(jsCallData));
     if (engine->hasException)
         result = engine->catchException();
+    if (engine->isInterrupted)
+        result = engine->newErrorObject(QStringLiteral("Interrupted"));
 
     return QJSValue(engine, result->asReturnedValue());
 }
